fix tab and card on mobile

--- a/styles/components/card/card.css
+++ b/styles/components/card/card.css
@@ -19,6 +19,7 @@
   position: absolute;
   left: 0;
   top: 0;
+  object-fit: cover;
   width: 100%;
   z-index: -1;
   border-radius: 50px;
@@ -51,7 +52,7 @@
   gap: 35px;
 }
 
-.card-links__link{
+.card-links__link {
   color: var(--white);
 }
 
@@ -60,15 +61,14 @@
 }
 
 @media screen and (max-width: 1023px) {
-  .card{
+  .card {
     height: 318px;
   }
 
-  .card img{
-    margin-top: -50%;
+  .card img {
+   margin-top: -30%; 
   }
 }
-
 
 @media screen and (max-width: 1023px) {
   .card-links__link {
