--- a/styles/components/tab/tab.css
+++ b/styles/components/tab/tab.css
@@ -8,3 +8,9 @@
   column-gap: 30px;
   /* width: 700px; */
 }
+
+@media screen and (max-width: 1023px) {
+  .tab{
+    column-gap: 10px;
+  }
+}
